tests/compile_fail/unknown_field_attribute.rs
use conflaguration::Settings;

#[derive(Settings)]
struct BadConfig {
    #[setting(bogus)]
    field: u16,
}

fn main() {}
